apps/umami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  namespace: umami
  labels:
    app.kubernetes.io/name: umami
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: umami
  template:
    metadata:
      labels:
        app.kubernetes.io/name: umami
    spec:
      containers:
        - name: umami
          image: docker.io/umamisoftware/umami:3.1.0
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /api/heartbeat
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/heartbeat
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 65532
            capabilities:
              drop:
                - ALL
