apps/umami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami
  namespace: umami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls.options: traefik-cloudflare-origin-pull@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - analytics.farooqui.ai
      secretName: analytics-farooqui-tls
  rules:
    - host: analytics.farooqui.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami
                port:
                  number: 80
